# apnamart-kafka-python

./: .gitignore  LICENSE  README.md  TODO.md  main.py  pyproject.toml
.github/workflows/: tests.yml
apnamart_kafka/: __init__.py  config.py  consumer.py  consumer_config.py  exceptions.py  producer.py  serializers.py
apnamart_kafka/base/: __init__.py  client.py  config.py  interfaces.py
apnamart_kafka/common/: __init__.py  monitoring.py  plugins.py
examples/: advanced_monitoring.py  async_usage.py  basic_usage.py  consumer_async_usage.py  consumer_basic_usage.py
tests/: __init__.py  test_config.py  test_consumer.py  test_consumer_config.py  test_producer.py  test_serializers.py
